[package]
name = "lb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.4.1"
awc = "3.3.0"
dotenv = "0.15.0"
env_logger = "0.11.0"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
